==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

Fixes
=====

 - Reflect internally used default size for ``translog.flush_threshold_size``
   also in documentation and expose the correct default value in table
   settings.